# pdf-diff-viewer

./: .gitignore  AGENTS.md  README.md  generate_samples.py  main.py  pyproject.toml
scripts/: Compare PDFs
