[project]
name = "pdf-diff-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.2",
    "reportlab>=4.4.10",
]

[project.scripts]
pdf-diff-viewer = "main:main"

[tool.setuptools]
py-modules = ["main"]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
